[package]

name = "allegro-sys"
version = "0.0.6" #auto
license = "Zlib"
repository = "https://github.com/SiegeLord/RustAllegro"
documentation = "http://siegelord.github.io/RustAllegro/doc/allegro-sys/index.html"
keywords = ["input", "windowing", "opengl", "direct3d"]
authors = [ "SiegeLord <slabode@aim.com>" ]
description = "Allegro 5 core library Rust binding"
build = "build.rs"
links = "allegro"

[lib]

name = "allegro-sys"
path = "src/lib.rs"

[features]

link_none = []
link_monolith = []
link_debug = []
link_static = []
