[package]

name = "allegro-sys"
version = "0.0.15" #auto
license = "Zlib"
repository = "https://github.com/SiegeLord/RustAllegro"
documentation = "http://siegelord.github.io/RustAllegro/doc/allegro-sys/index.html"
keywords = ["input", "windowing", "opengl", "direct3d"]
authors = [ "SiegeLord <slabode@aim.com>" ]
description = "Allegro 5 core library Rust binding"
build = "build.rs"
links = "allegro"

[lib]

name = "allegro_sys"
path = "src/lib.rs"

[features]

link_none = []
link_debug = []
link_static = []

[dependencies]

libc = "0.1"

[dependencies.allegro_util]

path = "../allegro_util"
version = "=0.0.15" #auto
