[package]

name = "allegro"
version = "0.0.15" #auto
license = "Zlib"
repository = "https://github.com/SiegeLord/RustAllegro"
documentation = "http://siegelord.github.io/RustAllegro/doc/allegro/index.html"
keywords = ["input", "windowing", "opengl", "direct3d"]
authors = [ "SiegeLord <slabode@aim.com>" ]
description = "Allegro 5 core library Rust wrapper"

[lib]

name = "allegro"
path = "src/lib.rs"

[features]

link_none = ["allegro-sys/link_none"]
link_debug = ["allegro-sys/link_debug"]
link_static = ["allegro-sys/link_static"]

[dependencies]

libc = "0.1"

[dependencies.allegro-sys]

path = "../allegro-sys"
version = "=0.0.15" #auto

[dependencies.allegro_util]

path = "../allegro_util"
version = "=0.0.15" #auto
