[package]

name = "allegro"
version = "0.0.38" #auto
license = "Zlib"
repository = "https://github.com/SiegeLord/RustAllegro"
documentation = "http://siegelord.github.io/RustAllegro/doc/allegro/index.html"
keywords = ["input", "windowing", "opengl", "direct3d", "graphics"]
authors = [ "SiegeLord <slabode@aim.com>" ]
description = "Allegro 5 core library Rust wrapper"
build = "build.rs"
categories = ["multimedia", "rendering::graphics-api"]

[lib]

name = "allegro"
path = "src/lib.rs"

[[test]]

name = "init_test"
path = "src/init_test.rs"
harness = false

[features]

link_none = ["allegro-sys/link_none"]
link_debug = ["allegro-sys/link_debug"]
link_static = ["allegro-sys/link_static"]

[dependencies]

libc = "0.2"
lazy_static = "=1.4.0"

[dependencies.allegro-sys]

path = "../allegro-sys"
version = "=0.0.38" #auto

[dependencies.allegro_util]

path = "../allegro_util"
version = "=0.0.38" #auto
