[package]

name = "allegro_acodec-sys"
version = "0.0.6" #auto
license = "Zlib"
repository = "https://github.com/SiegeLord/RustAllegro"
documentation = "http://siegelord.github.io/RustAllegro/doc/allegro_acodec-sys/index.html"
keywords = ["audio"]
authors = [ "SiegeLord <slabode@aim.com>" ]
description = "Allegro 5 acodec addon Rust binding"
build = "build.rs"
links = "allegro_acodec"

[lib]

name = "allegro_acodec-sys"
path = "src/lib.rs"

[features]

link_none = []
link_debug = []
link_static = []
