[package]

name = "allegro_acodec"
version = "0.0.38" #auto
license = "Zlib"
repository = "https://github.com/SiegeLord/RustAllegro"
documentation = "http://siegelord.github.io/RustAllegro/doc/allegro_acodec/index.html"
keywords = ["audio"]
authors = [ "SiegeLord <slabode@aim.com>" ]
description = "Allegro 5 acodec addon Rust wrapper"
categories = ["multimedia::audio"]

[lib]

name = "allegro_acodec"
path = "src/lib.rs"

[features]

link_none = ["allegro_acodec-sys/link_none"]
link_debug = ["allegro_acodec-sys/link_debug"]
link_static = ["allegro_acodec-sys/link_static"]

[dependencies.allegro]

path = "../allegro"
version = "=0.0.38" #auto

[dependencies.allegro_audio]

path = "../allegro_audio"
version = "=0.0.38" #auto

[dependencies.allegro_acodec-sys]

path = "../allegro_acodec-sys"
version = "=0.0.38" #auto
