[package]

name = "allegro_audio-sys"
version = "0.0.15" #auto
license = "Zlib"
repository = "https://github.com/SiegeLord/RustAllegro"
documentation = "http://siegelord.github.io/RustAllegro/doc/allegro_audio-sys/index.html"
keywords = ["audio"]
authors = [ "SiegeLord <slabode@aim.com>" ]
description = "Allegro 5 audio addon Rust binding"
build = "build.rs"
links = "allegro_audio"

[lib]

name = "allegro_audio_sys"
path = "src/lib.rs"

[features]

link_none = []
link_debug = []
link_static = []

[dependencies]

libc = "0.1"

[dependencies.allegro-sys]

path = "../allegro-sys"
version = "=0.0.15" #auto

[dependencies.allegro_util]

path = "../allegro_util"
version = "=0.0.15" #auto
