[package]

name = "allegro_audio"
version = "0.0.1" #auto
license = "Zlib"
repository = "https://github.com/SiegeLord/RustAllegro"
documentation = "http://siegelord.github.io/RustAllegro/doc/allegro_audio/index.html"
keywords = ["audio"]
authors = [ "SiegeLord <slabode@aim.com>" ]
description = "Allegro 5 audio addon Rust wrapper"

[lib]

name = "allegro_audio"
path = "src/lib.rs"

[dependencies.allegro]

path = "../allegro"
version = "=0.0.1" #auto
