[package]

name = "allegro_audio"
version = "0.0.38" #auto
license = "Zlib"
repository = "https://github.com/SiegeLord/RustAllegro"
documentation = "http://siegelord.github.io/RustAllegro/doc/allegro_audio/index.html"
keywords = ["audio"]
authors = [ "SiegeLord <slabode@aim.com>" ]
description = "Allegro 5 audio addon Rust wrapper"

[lib]

name = "allegro_audio"
path = "src/lib.rs"

[features]

link_none = ["allegro_audio-sys/link_none"]
link_debug = ["allegro_audio-sys/link_debug"]
link_static = ["allegro_audio-sys/link_static"]

[dependencies]

libc = "0.2"

[dependencies.allegro]

path = "../allegro"
version = "=0.0.38" #auto

[dependencies.allegro_audio-sys]

path = "../allegro_audio-sys"
version = "=0.0.38" #auto

[dependencies.allegro_util]

path = "../allegro_util"
version = "=0.0.38" #auto
