[package]

name = "allegro_dialog"
version = "0.0.0"
license = "Zlib"
repository = "https://github.com/SiegeLord/RustAllegro"
documentation = "http://siegelord.github.io/RustAllegro/doc/allegro_dialog/index.html"
keywords = ["dialogs"]
authors = [ "SiegeLord <slabode@aim.com>" ]
description = "Allegro 5 dialog addon Rust wrapper"

[lib]

name = "allegro_dialog"
path = "src/lib.rs"

[dependencies.allegro]

path = "../allegro"
version = "=0.0.0"
