[package]

name = "allegro_dialog"
version = "0.0.38" #auto
license = "Zlib"
repository = "https://github.com/SiegeLord/RustAllegro"
documentation = "http://siegelord.github.io/RustAllegro/doc/allegro_dialog/index.html"
keywords = ["dialogs"]
authors = [ "SiegeLord <slabode@aim.com>" ]
description = "Allegro 5 dialog addon Rust wrapper"
categories = ["gui"]

[lib]

name = "allegro_dialog"
path = "src/lib.rs"

[features]

link_none = ["allegro_dialog-sys/link_none"]
link_debug = ["allegro_dialog-sys/link_debug"]
link_static = ["allegro_dialog-sys/link_static"]

[dependencies]

libc = "0.2"

[dependencies.allegro]

path = "../allegro"
version = "=0.0.38" #auto

[dependencies.allegro_dialog-sys]

path = "../allegro_dialog-sys"
version = "=0.0.38" #auto

[dependencies.allegro_util]

path = "../allegro_util"
version = "=0.0.38" #auto
