[package]

name = "allegro_font-sys"
version = "0.0.9" #auto
license = "Zlib"
repository = "https://github.com/SiegeLord/RustAllegro"
documentation = "http://siegelord.github.io/RustAllegro/doc/allegro_font-sys/index.html"
keywords = ["text", "font", "graphics"]
authors = [ "SiegeLord <slabode@aim.com>" ]
description = "Allegro 5 font addon Rust binding"
build = "build.rs"
links = "allegro_font"

[lib]

name = "allegro_font-sys"
path = "src/lib.rs"

[features]

link_none = []
link_debug = []
link_static = []

[dependencies.allegro-sys]

path = "../allegro-sys"
version = "=0.0.9" #auto
