[package]

name = "allegro_font-sys"
version = "0.0.38" #auto
license = "Zlib"
repository = "https://github.com/SiegeLord/RustAllegro"
documentation = "http://siegelord.github.io/RustAllegro/doc/allegro_font-sys/index.html"
keywords = ["text", "font", "graphics"]
authors = [ "SiegeLord <slabode@aim.com>" ]
description = "Allegro 5 font addon Rust binding"
build = "build.rs"
links = "allegro_font"
categories = ["rendering::data-formats", "external-ffi-bindings"]

[lib]

name = "allegro_font_sys"
path = "src/lib.rs"

[features]

link_none = []
link_debug = []
link_static = []

[dependencies]

libc = "0.2"

[dependencies.allegro-sys]

path = "../allegro-sys"
version = "=0.0.38" #auto

[dependencies.allegro_util]

path = "../allegro_util"
version = "=0.0.38" #auto
