[package]

name = "allegro_font"
version = "0.0.1" #auto
license = "Zlib"
repository = "https://github.com/SiegeLord/RustAllegro"
documentation = "http://siegelord.github.io/RustAllegro/doc/allegro_font/index.html"
keywords = ["text", "font", "graphics"]
authors = [ "SiegeLord <slabode@aim.com>" ]
description = "Allegro 5 font addon Rust wrapper"

[lib]

name = "allegro_font"
path = "src/lib.rs"

[dependencies.allegro]

path = "../allegro"
version = "=0.0.1" #auto
