[package]

name = "allegro_font"
version = "0.0.38" #auto
license = "Zlib"
repository = "https://github.com/SiegeLord/RustAllegro"
documentation = "http://siegelord.github.io/RustAllegro/doc/allegro_font/index.html"
keywords = ["text", "font", "graphics"]
authors = [ "SiegeLord <slabode@aim.com>" ]
description = "Allegro 5 font addon Rust wrapper"
categories = ["rendering::data-formats"]

[lib]

name = "allegro_font"
path = "src/lib.rs"

[features]

link_none = ["allegro_font-sys/link_none"]
link_debug = ["allegro_font-sys/link_debug"]
link_static = ["allegro_font-sys/link_static"]

[dependencies]

libc = "0.2"

[dependencies.allegro]

path = "../allegro"
version = "=0.0.38" #auto

[dependencies.allegro-sys]

path = "../allegro-sys"
version = "=0.0.38" #auto

[dependencies.allegro_font-sys]

path = "../allegro_font-sys"
version = "=0.0.38" #auto

[dependencies.allegro_util]

path = "../allegro_util"
version = "=0.0.38" #auto
