[package]

name = "allegro_image-sys"
version = "0.0.15" #auto
license = "Zlib"
repository = "https://github.com/SiegeLord/RustAllegro"
documentation = "http://siegelord.github.io/RustAllegro/doc/allegro_image-sys/index.html"
keywords = ["image", "graphics"]
authors = [ "SiegeLord <slabode@aim.com>" ]
description = "Allegro 5 image addon Rust binding"
build = "build.rs"
links = "allegro_image"

[lib]

name = "allegro_image_sys"
path = "src/lib.rs"

[features]

link_none = []
link_debug = []
link_static = []

[dependencies]

libc = "0.1"

[dependencies.allegro_util]

path = "../allegro_util"
version = "=0.0.15" #auto
