[package]

name = "allegro_image"
version = "0.0.0"
license = "Zlib"
repository = "https://github.com/SiegeLord/RustAllegro"
documentation = "http://siegelord.github.io/RustAllegro/doc/allegro_image/index.html"
keywords = ["image", "graphics"]
authors = [ "SiegeLord <slabode@aim.com>" ]
description = "Allegro 5 image addon Rust wrapper"

[lib]

name = "allegro_image"
path = "src/lib.rs"

[dependencies.allegro]

path = "../allegro"
version = "=0.0.0"
