[package]

name = "allegro_image"
version = "0.0.38" #auto
license = "Zlib"
repository = "https://github.com/SiegeLord/RustAllegro"
documentation = "http://siegelord.github.io/RustAllegro/doc/allegro_image/index.html"
keywords = ["image", "graphics"]
authors = [ "SiegeLord <slabode@aim.com>" ]
description = "Allegro 5 image addon Rust wrapper"
categories = ["rendering::data-formats"]

[lib]

name = "allegro_image"
path = "src/lib.rs"

[features]

link_none = ["allegro_image-sys/link_none"]
link_debug = ["allegro_image-sys/link_debug"]
link_static = ["allegro_image-sys/link_static"]

[dependencies]

libc = "0.2"

[dependencies.allegro]

path = "../allegro"
version = "=0.0.38" #auto

[dependencies.allegro_image-sys]

path = "../allegro_image-sys"
version = "=0.0.38" #auto

[dependencies.allegro_util]

path = "../allegro_util"
version = "=0.0.38" #auto
