[package]

name = "allegro_primitives"
version = "0.0.1" #auto
license = "Zlib"
repository = "https://github.com/SiegeLord/RustAllegro"
documentation = "http://siegelord.github.io/RustAllegro/doc/allegro_primitives/index.html"
keywords = ["primitives", "graphics"]
authors = [ "SiegeLord <slabode@aim.com>" ]
description = "Allegro 5 primitives addon Rust wrapper"

[lib]

name = "allegro_primitives"
path = "src/lib.rs"

[dependencies.allegro]

path = "../allegro"
version = "=0.0.1" #auto
