[package]

name = "allegro_primitives"
version = "0.0.38" #auto
license = "Zlib"
repository = "https://github.com/SiegeLord/RustAllegro"
documentation = "http://siegelord.github.io/RustAllegro/doc/allegro_primitives/index.html"
keywords = ["primitives", "graphics"]
authors = [ "SiegeLord <slabode@aim.com>" ]
description = "Allegro 5 primitives addon Rust wrapper"
categories = ["rendering"]

[lib]

name = "allegro_primitives"
path = "src/lib.rs"

[features]

link_none = ["allegro_primitives-sys/link_none"]
link_debug = ["allegro_primitives-sys/link_debug"]
link_static = ["allegro_primitives-sys/link_static"]

[dependencies]

libc = "0.2"

[dependencies.allegro]

path = "../allegro"
version = "=0.0.38" #auto

[dependencies.allegro-sys]

path = "../allegro-sys"
version = "=0.0.38" #auto

[dependencies.allegro_primitives-sys]

path = "../allegro_primitives-sys"
version = "=0.0.38" #auto
