[package]

name = "allegro_ttf-sys"
version = "0.0.38" #auto
license = "Zlib"
repository = "https://github.com/SiegeLord/RustAllegro"
documentation = "http://siegelord.github.io/RustAllegro/doc/allegro_ttf-sys/index.html"
keywords = ["text", "graphics", "ttf", "font"]
authors = [ "SiegeLord <slabode@aim.com>" ]
description = "Allegro 5 ttf addon Rust binding"
build = "build.rs"
links = "allegro_ttf"
categories = ["rendering::data-formats", "external-ffi-bindings"]

[lib]

name = "allegro_ttf_sys"
path = "src/lib.rs"

[features]

link_none = []
link_debug = []
link_static = []

[dependencies]

libc = "0.2"

[dependencies.allegro_font-sys]

path = "../allegro_font-sys"
version = "=0.0.38" #auto

[dependencies.allegro-sys]

path = "../allegro-sys"
version = "=0.0.38" #auto

[dependencies.allegro_util]

path = "../allegro_util"
version = "=0.0.38" #auto
